# dr-magu-cli

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  RELEASE_v1.1.1.md  RELEASE_v1.1.2.md  RELEASE_v1.1.3.md  RELEASE_v1.1.4.md  RELEASE_v1.1.5.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md  RELEASE_v1.4.0.md  RELEASE_v1.5.0.md  RELEASE_v1.6.0.md  RELEASE_v1.7.0.md  RELEASE_v1.8.0.md  RELEASE_v2.0.0.md  RELEASE_v2.1.0.md  RELEASE_v2.1.1.md  RELEASE_v2.1.2.md  RELEASE_v2.1.3.md  RELEASE_v2.2.0.md  RELEASE_v2.5.0.md  RELEASE_v2.8.1.md  RELEASE_v3.0.2.md  VALIDATION_v0.9.5.txt  pyproject.toml
config/: agents.yaml  mcp_servers.example.json  mcp_servers.v2.1.example.json  models.yaml  orchestration.yaml
scripts/: clean_artifacts.py
tests/: test_agent_collaboration_artifact_pipeline_v302.py  test_agent_management.py  test_agent_runtime_v260.py  test_agent_skills_framework_v270.py  test_ai_operating_system.py  test_ai_orchestrator_brain.py  test_autonomous_software_factory.py  test_brain_foundation.py  test_chat_ux_layer.py  test_command_processor.py  test_control_center.py  test_conversational_brain_foundation.py  test_conversational_command_router.py  test_cross_platform.py  test_dynamic_planning_engine_v300.py  test_execution_runtime_layer.py  test_file_tools.py  test_health_checks.py  test_hitl_approval_engine.py  test_intent_router.py  test_llm_provider_headers.py  test_llm_response_sanitization.py  test_llm_runtime_integration.py  test_mcp_research_runtime.py  test_multi_agent_orchestrator.py  test_operational_mcp_runtime.py  (+30 more)
(+281 files in other folders)
